<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNewSeries">

    <RelativeLayout
        android:id="@+id/activity_add_new_series"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="sean.itr1.AddNewSeries">

        <TextView
            android:text="@string/series_addition_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/add_new_series_message"
            android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
            android:gravity="center_vertical|center_horizontal" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/series_name_edit_text"
            android:hint="@string/name_of_series"
            android:gravity="center_vertical|center_horizontal"
            android:layout_below="@+id/add_new_series_message"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="19dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/series_type_edit_text"
            android:hint="@string/show_type"
            android:gravity="center_vertical|center_horizontal"
            android:layout_below="@+id/series_name_edit_text"
            android:layout_alignLeft="@+id/series_name_edit_text"
            android:layout_alignStart="@+id/series_name_edit_text" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/series_genre_edit_text"
            android:hint="@string/genre_field"
            android:gravity="center_vertical|center_horizontal"
            android:layout_below="@+id/series_type_edit_text"
            android:layout_alignLeft="@+id/series_type_edit_text"
            android:layout_alignStart="@+id/series_type_edit_text" />


        <CheckBox
            android:text="Add Series to My Archive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:id="@+id/check_box"
            android:layout_below="@+id/series_genre_edit_text"
            android:layout_centerHorizontal="true" />

        <Button
            android:text="@string/add_series"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_series_to_database"
            android:onClick="onClick"
            android:layout_below="@+id/check_box"
            android:layout_centerHorizontal="true" />

        <Button
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cancel_action"
            android:onClick="onClick"
            android:layout_below="@+id/add_series_to_database"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>