...
    <Button
        android:text="@string/appearance_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/appearance_button"
        android:onClick="onClick"
        android:layout_below="@+id/notifications_button"
        android:layout_alignStart="@+id/notifications_button" />

    <Button
        android:text="@string/notification_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/notifications_button"
        android:onClick="onClick"
        android:layout_below="@+id/my_archive_settings"
        android:layout_alignStart="@+id/my_archive_settings" />

    <Button
        android:text="@string/go_to_my_profile"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
...
