...
    <string name="name_of_series">Name of Series</string>
    <string name="show_type">Show Type</string>
    <string name="add_series">Add Series</string>
    <string name="cancel">Cancel Addition</string>
    <string name="no">No</string>
    <string name="series_not_found_message">Oh? This show does not exist in our database. Would you like to add the show you\'ve searched for into the database as a new series?</string>
    <string name="yes">Yes</string>
    <string name="series_addition_message">Enter your information on the series you will be adding:</string>
    <string name="series_name_bar">Enter Series Name</string>
    <string name="app_iteration_message">Note: This is a WIP app. Features will be added in future iterations of the app.</string>
    <string name="sean_homepage">SEAN: Series Entertainment Archive Network</string>
    <string name="search_option">Search for a series</string>
    <string name="archive_option">Go to My Archive</string>
...
