<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LinkEditPage">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_add_new_series"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="sean.itr1.AddNewSeries">

        <TextView
            android:text="@string/url_edit_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/edit_url_message"
            android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
            android:gravity="center_vertical|center_horizontal" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:ems="10"
            android:id="@+id/wiki_url_input"
            android:hint="@string/wiki_url"
            android:gravity="center_vertical|center_horizontal"
            android:layout_below="@+id/edit_url_message"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="19dp" />

        <Button
            android:text="@string/add_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/confirm_wiki_url"
            android:layout_below="@+id/wiki_url_input"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:onClick="onClick"/>


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:ems="10"
            android:id="@+id/imdb_url_input"
            android:hint="@string/imdb_url"
            android:gravity="center_vertical|center_horizontal"
            android:layout_above="@+id/confirm_imdb_url"
            android:layout_alignStart="@+id/wiki_url_input" />

        <Button
            android:text="@string/add_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/confirm_imdb_url"
            android:onClick="onClick"
            android:layout_centerVertical="true"
            android:layout_alignStart="@+id/confirm_wiki_url" />

        <Button
            android:text="@string/go_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/back_button"
            android:layout_marginTop="65dp"
            android:onClick="onClick"
            android:layout_below="@+id/confirm_imdb_url"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
