<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_my_archive_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="sean.itr1.MyArchivePage">

    <Button
        android:text="@string/back_out_myArchive"
        android:layout_width="100dp"
        android:layout_height="65dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/back_button_my_archive"
        android:onClick="onClick" />

    <Button
        android:text="@string/myArchive_settings"
        android:layout_width="100dp"
        android:layout_height="65dp"
        android:id="@+id/my_archive_settings"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:onClick="onClick" />

    <ListView
        android:id="@+id/my_archive_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/back_button_my_archive" >
    </ListView>

</RelativeLayout>
